WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102384
Memory instrumentation: add code for reporting stack traces of unknown instrumented objects
https://bugs.webkit.org/show_bug.cgi?id=102384
Summary
Memory instrumentation: add code for reporting stack traces of unknown instru...
Yury Semikhatsky
Reported
2012-11-15 06:55:10 PST
Would be convenient to have a code that would report stack traces for objects that are reported to the memory instrumentation but are not among the objects allocated by malloc.
Attachments
Patch
(7.52 KB, patch)
2012-11-15 07:09 PST
,
Yury Semikhatsky
pfeldman
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(8.50 KB, patch)
2012-11-15 08:25 PST
,
Yury Semikhatsky
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(9.11 KB, patch)
2012-11-15 22:45 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-11-15 07:09:53 PST
Created
attachment 174431
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-15 07:13:59 PST
Attachment 174431
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/Me..." exit_code: 1 Source/WTF/wtf/MemoryInstrumentation.h:41: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 3
2012-11-15 07:43:55 PST
Comment on
attachment 174431
[details]
Patch Rejecting
attachment 174431
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: st.cpp:93: error: conflicting return type specified for 'virtual void<unnamed>::MemoryInstrumentationTestClient::checkCountedObject(const void*)' Source/WTF/wtf/MemoryInstrumentation.h:102: error: overriding 'virtual bool WTF::MemoryInstrumentationClient::checkCountedObject(const void*)' make: *** [out/Release/obj.target/TestWebKitAPI/Tools/TestWebKitAPI/Tests/WTF/MemoryInstrumentationTest.o] Error 1 make: *** Waiting for unfinished jobs.... LINK(target) out/Release/DumpRenderTree: Finished Full output:
http://queues.webkit.org/results/14857241
EFL EWS Bot
Comment 4
2012-11-15 07:57:41 PST
Comment on
attachment 174431
[details]
Patch
Attachment 174431
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/14843614
WebKit Review Bot
Comment 5
2012-11-15 08:00:26 PST
Comment on
attachment 174431
[details]
Patch
Attachment 174431
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/14846425
Yury Semikhatsky
Comment 6
2012-11-15 08:25:31 PST
Created
attachment 174450
[details]
Patch for landing Fixed Tools/TestWebKitAPI/Tests/WTF/MemoryInstrumentationTest.cpp compilation.
WebKit Review Bot
Comment 7
2012-11-15 08:27:16 PST
Attachment 174450
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/Me..." exit_code: 1 Source/WTF/wtf/MemoryInstrumentation.h:41: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 8
2012-11-15 09:09:18 PST
Comment on
attachment 174450
[details]
Patch for landing
Attachment 174450
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/14833763
EFL EWS Bot
Comment 9
2012-11-15 10:18:09 PST
Comment on
attachment 174450
[details]
Patch for landing
Attachment 174450
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/14843664
kov's GTK+ EWS bot
Comment 10
2012-11-15 12:42:32 PST
Comment on
attachment 174450
[details]
Patch for landing
Attachment 174450
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/14846524
Peter Beverloo (cr-android ews)
Comment 11
2012-11-15 14:24:40 PST
Comment on
attachment 174450
[details]
Patch for landing
Attachment 174450
[details]
did not pass cr-android-ews (chromium-android): Output:
http://queues.webkit.org/results/14847511
Build Bot
Comment 12
2012-11-15 22:38:06 PST
Comment on
attachment 174450
[details]
Patch for landing
Attachment 174450
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/14861070
Yury Semikhatsky
Comment 13
2012-11-15 22:45:17 PST
Created
attachment 174610
[details]
Patch for landing
WebKit Review Bot
Comment 14
2012-11-15 22:48:29 PST
Attachment 174610
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/Me..." exit_code: 1 Source/WTF/wtf/MemoryInstrumentation.h:41: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yury Semikhatsky
Comment 15
2012-11-15 23:30:41 PST
Committed
r134906
: <
http://trac.webkit.org/changeset/134906
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug