Memory instrumentation: add code for reporting stack traces of unknown instrumented objects https://bugs.webkit.org/show_bug.cgi?id=102384

Reviewed by Pavel Feldman.

Source/WebCore:

* inspector/InspectorMemoryAgent.cpp:
(WebCore::MemoryInstrumentationClientImpl::checkCountedObject): return false
if the check fails.
* inspector/MemoryInstrumentationImpl.h:
(MemoryInstrumentationClientImpl):

Source/WTF:

Added an option to collect stack traces for instrumented pointers so that they
can be printed in case the check failed for the pointer. This code is hidden
behind a define.

* wtf/MemoryInstrumentation.h:
(MemoryInstrumentationClient):
(WTF::MemoryInstrumentation::checkCountedObject): the method now returns false
in case the check has failed.
(InstrumentedPointer):
(WTF::::InstrumentedPointer):
(WTF):
(WTF::::process):

Tools:

Updated return type in accord with the changes in MemoryInstrumentationClient.

* TestWebKitAPI/Tests/WTF/MemoryInstrumentationTest.cpp:

Canonical link: https://commits.webkit.org/120598@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134906 268f45cc-cd09-0410-ab3c-d52691b4dbfc